# VDSProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
reachability/: Reachability.cpp  Reachability.h  ReachabilityInterface.h  Tests.h
src/: CMakeLists.txt  Manager.cpp  Manager.h  main.cpp
src/Philipp_Tests/: CMakeLists.txt  Test.h  main_test_PL.cpp
src/bench/: CMakeLists.txt  CircuitToBDD.cpp
src/reachability/: Reachability.cpp  Reachability.h  Tests.h
src/test/: Tests.h  main_test.cpp
